--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-  <title>Help-14 Vinyl Collection</title>
+  <title>Vinyl Collection</title>
 </head>
 
 <body>
