--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <meta name="description" content="NhanPT's vinyl collection. All the disks that I own right now." />
   <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
   <title>Vinyl Collection</title>
 </head>
